# assethold

./: .command-registry.json  .gitignore  CLAUDE.md  CLAUDE.md.backup.20250805-204115  README.md  create-module-agent.py  poetry_latest_versions.txt  pyproject.toml  requirements-consolidated.txt  uv.toml
.agent-os/context/: project-patterns.yml  team-conventions.yml
.agent-os/product/: README.md  decisions.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-07-30-agent-os-integration/: spec.md  tasks.md
.agent-os/specs/2025-07-30-agent-os-integration/sub-specs/: technical-spec.md  tests.md
.agent-os/sub-agents/: development-agent.md
agents/: index.yaml
data/loopnet/: 2025-06-29_loopnet.csv
dev_tools/: environment.yml  requirements.txt
dev_tools/bash/git/: git_all_repos_daily_commit.sh
dev_tools/bash/poetry/: au_poetry_create_environment_developer.sh
docs/: README.md  Thumbs.db  architecture.puml  breakout.md  cash_flow_is_king.jfif  literature.md  stockhold.md  stocks.md  tcs_stock_data.csv
docs/_lib/: investing_guidelines.puml
docs/_lib/stocks/journals/: portfolio.md
docs/_lib/stocks/legacy_files/: construction_management.md  gantt_proj.puml  historicalweeklydata.xlsx  macroeconomics.md
docs/biz/acq_planmatics/: acq_planmatics.md
docs/flowcharts/: data.puml
docs/incorporation/: intro.md
docs/mineral_rights/: landman.md  learn_minerals.md  oil_well_purchase.md  uow.md
docs/modules/: README.md
docs/modules/money_market/: interest_rate.md
docs/modules/portfolio/: portfolio_ffn_vs_assethold_calc.md
docs/modules/realestate/: NNN.md  realestate.md  test_bs4.py  test_linkedin.py  test_selenium.py
docs/modules/stocks/: financial_function_Ffn.puml  literature.md  stock_data.puml  stock_investment_value.puml
docs/oil_wells/: landman.md  meagher_energy.md  production_lenders.md  purchase_sources.md
docs/realestate/: 1031_exchange.md  Thumbs.db  due-diligence-gantt-chart.xlsx  interest_rate.md  multi_family.md  multi_family_development.md  multi_family_financing.md  multi_family_insurance.md  multi_family_syndicators.md  multi_family_vacancy.md  re_strategy.md
docs/realestate/re_cre/: 2023-08-10_AquaSonic_car_wash.md  houstontx.md  sam_zell.md  tax_breaks.md  tax_breaks_sec179.md
docs/realestate/re_cre/kkd/: Vamsee property.pptx
docs/realestate/re_dcf/: dcf.md
docs/realestate/re_debt/: debt_assumption.md
docs/realestate/re_farmland/: farmland.md
docs/realestate/re_farmland/farmfolio/: farmfolio.html
docs/realestate/re_loopnet/auction/: intro.md
docs/realestate/re_multifamily/: 2022-09_housing_demand.jfif  2022-09_unsold_houses.jfif  2022_oct-rent_cuts.jfif  2023-01-cre_brokerages.jfif  PIC Feeder Tax Return Status Tracker_ 2022 tax season (2021 year returns).xlsx  PIC K-1 estimator (2021 tax year_2022 tax season).  Not tax advice. Use at your own risk..xlsx  Value Add Model with Pref.xlsx  Wellings Capital Operator Due Diligence Process.docx  commercial_real_estate_transactions.jfif  evictionsjfif.jfif  multifamily_loan-to-value_ratio.jfif  rent_concessions.jfif  renters_by_class.jfif  udemy.md
docs/realestate/re_multifamily/examples/: Galis_WhatsApp Chat with Chaitanya Chava.txt  new_construction_linkedIn_bobby.md  savoy_example_different_returns.jfif  valuation_linkedIn_bobby.jfif  valuation_linkedIn_bobby.md
docs/realestate/re_singlefamily/: singlefamily.md
docs/realestate/re_taxes/: ex_tax_savings.md
docs/stocks/: backtesting.md  historicalweeklydata_SS_help.xlsx  leg_stocks.md  why_stocks.md
docs/stocks/etfs/: SP500.md  eft.md  nasdaq.md
docs/stocks/legacy_files/: architecture.puml  taxes.md
docs/stocks/tradingview/: PRD.md  on-pinescript.md  rsi_oversold_recovery.pine
docs/sustenance/: cash_accounts.puml  sustainable_investment.md  sustenance.puml  will.puml
src/assethold/: __init__.py  __main__.py  engine.py  finance_components.py  finance_components_analysis.py  finance_components_get_SEC_data.py  stock_analysis.py
src/assethold/all_legacy/: flask_app.py  stock_analysis.py  stock_charts.py  tcs_stock_data.py
src/assethold/analysis/: investment_value.py  portfolio.py  profit_calculation.py  stock_analysis.py
src/assethold/custom/: stocks.py
src/assethold/data/: get_stock_data.py
src/assethold/legacy_code/: finance_components_get_data.py
src/assethold/modules/stocks/: stocks.py  (+8 more)
src/assethold/tests/: test_finance_EOD_data.py  test_finance_insider.py  test_flask_stock_analysis_for_ticker.py  test_flask_stock_analysis_run_all_tickers.py  test_service_stock_UI_for_ticker.py  test_service_stock_analysis_run_all_tickers.py  test_stock_analysis_for_ticker.py  test_stock_visualization_for_ticker_text_area.py
src/stockhold/: engine.py  finance_components.py  finance_components_analysis.py  finance_components_get_data.py  flask_app.py  stock_analysis.py  stock_charts.py  tcs_stock_data.py
src/stockhold/analysis/: legacy_stock_analysis.py  stock_analysis.py
src/stockhold/common/: visualization.py
src/stockhold/custom/: stocks.py
src/stockhold/data/: finance_components_get_data.py  get_SEC_data.py  get_stock_data.py
src/stockhold/test/: test_all_analysis_xom.py  test_finance_EOD_data.py  test_finance_insider.py  test_finance_institution.py  test_sec_data.py  test_service_stock_analysis_run_all_tickers.py  test_stock_analysis_for_ticker.py  test_stock_visualization_for_ticker.py  test_stock_visualization_for_ticker_dropdown.py  test_stock_visualization_for_ticker_text_area.py
src/stockhold/tests/: test_breakout_analysis.py  test_finance_analysis.py  test_flask_stock_analysis_for_ticker.py  test_flask_stock_analysis_run_all_tickers.py  test_service_stock_UI_for_ticker.py  test_service_stock_analysis_run_all_tickers.py  test_stock_visualization_for_ticker_text_area.py  tests_status.txt
tests/: yml_summary.txt
tests/modules/all_yml/: repo_yml_status.csv  test_all_yml.py
tests/modules/multifamily/: test_1.py
tests/modules/stocks/: test_all_yml.py
tests/test_data/legacy_tests/: test_all_analysis_xom.py  test_portfolio ai.py  test_sec_data.py  test_stock_visualization_for_ticker_dropdown.py
(+256 files in other folders)
