[tool.poetry]
name = "assethold"
version = "0.1.0"
description = "AssetHold project with Dash and Flask stack"
authors = ["you@example.com"]

[tool.poetry.dependencies]
python = "3.12.3"
pandas = "^2.2.0"
pyyaml = "^6.0.1"
numpy-financial = "^1.0.0"
bumpver = "^2023.1129"
matplotlib = "^3.8.2"
plotly = "^5.21.0"
dash = "2.5.1"
dash-bootstrap-components = "^1.5.0"
urllib3 = "^2.2.1"
xmltodict = "^0.13.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.29"
yfinance = "^0.2.37"
yahoo-fin = "^0.8.9.1"
finvizfinance = "^1.1.0"
sec-edgar-downloader = "^5.0.3"
ta = "^0.11.0"
flask-wtf = "^1.2.1"
flask-httpauth = "^4.7.0"
flask-restful = "^0.3.10"
requests-html = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
